<resources>
    <string name="app_name">sms-application</string>
    <string name="rele2">rele2</string>
    <string name="relay_status">Relay status</string>
    <string name="ukljuci">Uključi</string>
    <string name="svetlo_spolja">Svetlo Spolja</string>
    <string name="refresh">Refresh</string>
    <string name="upisani_brojevi">Upisani brojevi</string>
    <string name="broj1">Broj1</string>
    <string name="ru_i_i">Ručići</string>
    <string name="izabrati">Izabrati</string>
    <string name="button">Button</string>
    <string name="izabrati_vreme_rada_u_minutama">izabrati vreme rada u minutama</string>
    <string name="posalji">Posalji</string>
    <string name="izabrati_izlaz">Izabrati izlaz</string>
    <string name="textview">TextView</string>
    <string name="po_alji">Pošalji</string>
    <string name="izabrati_vreme_rada_u_minutima">Izabrati vreme rada u minutima</string>
    <string-array name="vremenaString">
        <item>"10"</item>
        <item>"20"</item>
        <item>"30"</item>
        <item>"40"</item>
        <item>"50"</item>
        <item>"60"</item>
        <item>"70"</item>
        <item>"80"</item>
        <item>"90"</item>
        <item>"100"</item>
        <item>"110"</item>
        <item>"120"</item>
        <item>"130"</item>
        <item>"140"</item>
        <item>"150"</item>
        <item>"160"</item>
        <item>"170"</item>
        <item>"180"</item>
    </string-array>
</resources>