<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/strana_P_komande"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:background="@drawable/bg_gradient"
    android:visibility="visible"

    tools:context=".P_command">


    <!--  app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dugmesalji_P" -->


    <TextView
        android:id="@+id/textView8"
        android:layout_width="72dp"
        android:layout_height="27dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="364dp"
        android:text="@string/po_alji"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="196dp"
        android:text="@string/izabrati_izlaz"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/padajuci_meni2"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:padding="1dp"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingRight="1dp"
        android:paddingBottom="1dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"

        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"

        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:textColor="#FF0000"
        android:theme="@style/ToolbarSpinnerItem"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/padajuci_meni1"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/dugmesalji_P"
        android:layout_width="77dp"
        android:layout_height="79dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="172dp"
        android:layout_marginLeft="172dp"
        android:foreground="@drawable/dugmeuklj"
        android:text="@string/button"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:targetApi="m" />

    <Spinner
        android:id="@+id/padajuci_meni1"
        android:layout_width="166dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:padding="1dp"
        android:paddingLeft="1dp"
        android:paddingTop="1dp"
        android:paddingRight="1dp"
        android:paddingBottom="1dp"
        android:scrollbarAlwaysDrawHorizontalTrack="false"

        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="3dp"
        android:scrollbarStyle="outsideInset"

        android:scrollbars="vertical"
        android:spinnerMode="dropdown"
        android:textColor="#FF0000"
        android:theme="@style/ToolbarSpinnerItem"
        android:verticalScrollbarPosition="defaultPosition"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="304dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/izabrati_vreme_rada_u_minutima"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:layout_marginStart="196dp"
        android:layout_marginLeft="196dp"
        android:layout_marginTop="580dp"
        android:text="@string/textview"
        android:textColor="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>